ghc-4335c07/testsuite/tests/indexed-types/should_compile/Exp.hs
{-# LANGUAGE TypeFamilies #-}

module Exp (C, C(type T), T, foo, S)
where

class C a where
  data T a :: *
  foo :: a -> a

data family S a b :: *
