ghc-4335c07/testsuite/tests/indexed-types/should_fail/T11450.hs
{-# LANGUAGE TypeFamilies #-}

module T11450 where

class C x where
  type T x

instance C (Either a b) where
  type T (Either b a) = b -> a
